# pytorch_learn

./: .gitignore  README.md
test_cifar10_cpp/: CMakeLists.txt  README.md  main.cpp  readme.md
test_cifar10_cpp/libtorch_1.1_cpu/: readme.md
test_cifar10_cpp/libtorch_1.1_cuda92/: readme.md
train_cnn_cifar10/: cvt_model2torchscript.py  network.py  test.py  train.py
